correct spacing and display none on br tag, more styleing on garden section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -280,7 +280,6 @@ figure.serv-item{
   background-size: cover;
   height: auto;
   width: 100%;
-  display: inline-block;
   .contact{
     background-color: rgba($white,0.9);
     height: 100%;
@@ -305,6 +304,9 @@ figure.serv-item{
       line-height: 1em;
     }
   }
+  br{
+    display: none;
+  }
 }
 #garden-center{
   background-color: #E1E1E1;
@@ -318,12 +320,23 @@ figure.serv-item{
     background-image: url("../images/gog_drone.jpg");
     background-size: cover;
     color: $white;
+    text-shadow: 0px 0px 20px rgba($black,0.5);
   }
   .contain{
     max-width: 600px;
     margin: 0 auto;
+    padding: 0 20px;
     @include breakpoint ('sm'){
-        padding: 0 20px 0 50px;
+        margin-left: 50px;
+    }
+    @include breakpoint ('md'){
+        margin-left: 80px;
+    }
+    @include breakpoint ('lg'){
+        margin-left: 120px;
+    }
+    @include breakpoint ('xl'){
+        margin-left: 200px;
     }
   }
   h2{
@@ -331,9 +344,12 @@ figure.serv-item{
     line-height: 1em;
     text-align: center;
     @include breakpoint ('sm'){
-      padding-top: 150px;
+      padding-top:192px;
       text-align: left;
   }
+    @include breakpoint ('md'){
+      padding-top: 150px;
+    }
 }
 .info-contact {
     background-color: white;
@@ -348,8 +364,11 @@ figure.serv-item{
     border: 1px solid rgba(0,0,0,0.23);
     @include breakpoint ('sm'){
         width: auto;
+        border-radius: 4px;
+    }
+    @include breakpoint ('md'){
+        width: auto;
         margin-left: 1em;
-
     }
     ul{
       padding-left: 0;
@@ -361,11 +380,16 @@ figure.serv-item{
       color: $yellow;
       font-size: 1.2em;
       font-weight: 600;
+      margin-bottom: 20px;
+      display: inline-block;
     }
     .fa{
       padding-right: .5em;
     }
-    p{font-size: .8em;}
+    p{
+      font-size: .8em;
+      margin-bottom: 0!important;
+    }
 }
 .info{
   padding: 2em 2em 0 2em;
@@ -379,6 +403,7 @@ figure.serv-item{
 #colophon{
   background-color: $green;
   height: auto;
+  padding-top: 3em;
   .location{
     margin-bottom: 2em;
   }
